--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1591,3 +1591,16 @@ author = "Buckingham, Edgar",
     year = {2004},
     url = {http://mech.fsv.cvut.cz/~dr/t3d.html},
   }
+
+  
+  @article {celia,
+author = {Celia, Michael A. and Bouloutas, Efthimios T. and Zarba, Rebecca L.},
+title = {A general mass-conservative numerical solution for the unsaturated flow equation},
+journal = {Water Resources Research},
+volume = {26},
+number = {7},
+issn = {1944-7973},
+doi = {10.1029/WR026i007p01483},
+pages = {1483--1496},
+year = {1990},
+}
