--- a/version2.tex
+++ b/version2.tex
@@ -42,6 +42,7 @@
 
 
 \newcommand{\dd}{\mathrm{d}}
+\renewcommand{\vec}{\mathbf}
  \newcommand{\subscript}[2]{$#1 _ #2$}
 
  \newcommand{\Lb}{\pazocal{L}}
@@ -142,9 +143,9 @@ The aim of this paper is to answer these proposed issues. The inverse modeling p
 \section{Methodology}% [lukas a michal]
 \label{metodo}
 
-This section is divided into two distinct parts. The first part, section~\ref{assamb}, is focused on assembling the experimental data, which were later used for the inverse modeling. In this section the site description, the reconstruction of the parameters of the SHPs for the lower profiles, and the processing of the experimental data is given.  If the reader is focused just on the topic of inverse analyses issues, then this entire section can be skipped, however this section also provides a complete definition of the SHPs parameters -- the solution of our inverse problem -- particularly in the paragraph~\ref{shp}.
+This section is divided into two distinct parts. The first part, section~\ref{assamb}, is focused on assembling the experimental data, which were later used for the inverse modeling. In this section the site description, the reconstruction of the parameters of the SHPs for the lower profiles, and the processing of the experimental data is given.   This section also provides a complete definition of the SHPs parameters -- the solution of our inverse problem -- particularly in the paragraph~\ref{shp}.
 
-The second part of the methodology, section~\ref{invproc}, covers the main topic of this paper -- the issues in Richards equation based inverse model. The governing equation is given together with  notes about the numerical stability of the convection dominant problems, since it is not always mentioned that diffusion type equation in cylindric coordinates (such as the Richards equation or the groundwater flow equation) contains first order derivative term, which is a language of mathematics nothing else than a convection term, and so the numerical stability issues appear.
+The second part of the methodology, section~\ref{invproc}, covers the main topic of this paper --  issues in the Richards equation based inverse model. The governing equation is given together with  notes about the numerical stability of the convection dominant problems, since it is not always mentioned that diffusion type equation in cylindric coordinates (such as the Richards equation or the groundwater flow equation) contains first order derivative term, which is a language of mathematics nothing else than a convection term, and so the numerical stability issues appear.
 Further the issues in selecting an appropriate boundary conditions are discussed, since it is not easy to find an agreement between the mathematical model setup and the physical conditions. Finally, the most important part, the construction of the objective function, and the methodology of the automatic calibration is given in this section. 
 
 
@@ -380,7 +381,7 @@ Equation~\eqref{richaxi} was implemented into DRUtES library~\citep{drutes, moje
 
 
 
- The domain was nonuniformly discretized by a triangular mesh. The smallest spatial step was considered for the top layers inside the infiltration ring, close to the Dirichlet boundary. The mesh is depicted on figure~\ref{valec}. The minimal spatial step was 0.5~cm, and the maximal spatial step was 20~cm. The domain was discretized with 2097 nodes and 3861 elements. The coarse mesh for the $dd$-adaptivity method was a uniform quadrilateral mesh with elements 17.75$\times$28.0~cm, i.e. a total of 40 coarse elements and 55 nodes.
+ The domain was nonuniformly discretized by a triangular mesh. The smallest spatial step was considered for the top layers inside the infiltration ring, close to the Dirichlet boundary. The mesh is depicted on figure~\ref{valec}. The minimal spatial step was 0.5~cm, and the maximal spatial step was 20~cm. The domain was discretized with 2097 nodes and 3861 elements. The coarse mesh for the $dd$-adaptivity method was a uniform quadrilateral mesh with elements 17.75$\times$28.0~cm, i.e. a total of 40 coarse elements and 55 nodes. The purpose of the coarse mesh is to organize the elements of the domain triangularization into a so-called clusters, which form a basic unit for the adaptive domain decomposition used here for solving the nonlinear problem, details can be found in~\citep{mojeamc2}.
 
  
  The spatial and temporal discretization of \eqref{richaxi} leads into sequential solutions of systems of non-linear equations, see e.g.~\citep{mojecomp}. The system was linearized, as discussed in~\citep{mojejcam2, mojeamc2}, and so the numerical solution requires an iterative solution of 
@@ -396,16 +397,19 @@ If the nonlinear problem is treated as
 \mathbf{A}(\vec{x}_{l-1}) \vec{x}_l = \vec{b}(\vec{x}_{l-1}),
 \end{lineq}
  we have introduced a kind of semiexplicit approximation  
-of~\eqref{richaxi}. It is apparent that for short time stepping the method converges to the exact solution. But for the inappropriate time stepping, the method is less inaccurate, but is free of possible issues related to the convergence of the nonlinear operator.
+of~\eqref{richaxi}. It is apparent that for short time stepping the method converges to the exact solution. But for the inappropriate time stepping, the method is less accurate, but is also free of possible issues related to the convergence of the nonlinear operator.
 
-Since the infiltration flux is obtained from the numerical derivative of the solution of \eqref{richaxi},  and since it is well known that inaccurate approximation of the capacity term (time derivative term) yields inaccurate mass properties, we are aware of a possible impact of spatial and temporal discretization on the identified SHP values. But we are also aware of possible difficulties with convergence of the linearized discrete system~\eqref{matice} for certain combinations of SHPs values within the ranges given in table~\ref{rozsahy} during the automatic calibration, as discussed in~\cite{beven2003-uncertain}.
+Since the infiltration flux is obtained from the numerical derivative of the solution of \eqref{richaxi},  and since it is well known that inaccurate approximation of the capacity term (time derivative term) yields inaccurate mass properties~\citep{celia}, we are aware of a possible impact of spatial and temporal discretization on the identified SHP values. But we are also aware of possible difficulties with convergence of the linearized discrete system~\eqref{matice} for certain combinations of SHPs values within the ranges given in table~\ref{rozsahy} during the automatic calibration, as discussed in~\cite{beven2003-uncertain}.
 And thus the following methodology for the automatic calibration was proposed here.
 
 \begin{enumerate}
-\item Proceed the calibration procedure with the quasi-explicit stable numerical technique for treating the nonlinear operator explained in equation~\eqref{matice2}, with the initial time step $t_{init}= 10^{-6}$~hrs, and for each subsequent time level $l$, $\Delta t_l = 1.05 \Delta t_{l-1}$, where $l=\{1,n_t\}$, where $n_t$ is the number of time levels used for the temporal discretization; the $dd$-adaptivity algorithm used the gradient approach only, see~\citep{mojejcam2}. The ranges of parameters for this calibration are given in table~\ref{rozsahy}, so the maximal values of SHP are defined as a vector $\vec{p}^{r_f}_{max}$, and the minimal values are defined as a vector $\vec{p}^{r_f}_{min}$. The spatial discretization for this step of calibration was given in the beginning of this section -- 2097 nodes and 3861 elements. 
-Let us assume that this discretization is given by a mesh density function ${\Delta}(\vec{x})^{r_f}$. The function $\Delta(\vec{x})^{r_f}$ is understood as a spatial distribution of mesh size density, which was used as an input for the mesh generator~\citep{t3d}. The superscript $r_f$ defines the refinement level, where $r_f=0$ at this particular stage.
+\item Proceed the calibration procedure with the quasi-explicit stable numerical technique for treating the nonlinear operator explained in equation~\eqref{matice2}, with the initial time step $t_{init}= 10^{-6}$~hrs, and for each subsequent time level $l$, $\Delta t_l = 1.05 \Delta t_{l-1}$, where $l=\{1,n_t\}$, where $n_t$ is the number of time levels used for the temporal discretization; the $dd$-adaptivity algorithm wasn't used at this step. The ranges of parameters for this calibration are given in table~\ref{rozsahy}, so the maximal values of SHP are defined as a vector $\vec{p}^{r_f}_{max}$, and the minimal values are defined as a vector $\vec{p}^{r_f}_{min}$. The spatial discretization for this step of calibration was given in the beginning of this section -- 2097 nodes and 3861 elements. 
+Let us assume that this discretization is given by a mesh density function ${\Delta}(\vec{x})^{r_f}$. The function $\Delta(\vec{x})^{r_f}$ is understood as a spatial distribution of mesh size density, which was used as an input for the mesh generator~\citep{t3d}. The superscript $r_f$ defines the refinement level, where $r_f=0$ at this particular stage, and the vector $\vec{x}$ refers to spatial coordinates inside the domain $\Omega$.
 \item Let us pressume that this inverse model will have more than just a single solution, this is an assumption of multimodality, which is based on~\citep{beven2003-uncertain}. \begin{itemize} \item Then this calibration will generate vectors of SHPs values $\vec{p}^{i_e}_{r_f}$, where the superscript $i_e$ denotes the number of some  particular local extreme. \end{itemize} 
-\item To validate the inverse modeling results, select physically acceptable local extremes and create a scatter plot of the objective function in its neighbourhood  with improved temporal integration and spatial discretization.  Use Schwarz-Picard method for solving the nonlinear system~\eqref{matice}. The iteration criterion for the Picard method was considered as $\bar{\varepsilon}^{r_f}= 10^{-3}$~cm. Again the super script $rf$ denotes the number of the Picard criterion refinements, which is is still $r_f=0$. Initial time step was $t_{init} =  10^{-8}$~hrs. Time step adaptivity was given by the Retention curve zone approach, see~\citep{mojeamc}. Combine the improved numerical scheme for temporal integration with the refined mesh (use one half of the previous spatial step size) and make the scatter plot again. \label{ll0}
+\item To validate the inverse modeling results, select physically acceptable local extremes and create a scatter plot of the objective function in its neighborhood  with improved temporal integration and spatial discretization. Increase the discretization level $r_f=r_f+1.$ Then 
+
+
+ Use Schwarz-Picard method for solving the nonlinear system~\eqref{matice}. The iteration criterion for the Picard method was considered as $\bar{\varepsilon}^{r_f}= 10^{-3}$~cm. Again the super script $rf$ denotes the number of the Picard criterion refinements, which is is still $r_f=0$. Initial time step was $t_{init} =  10^{-8}$~hrs. Time step adaptivity was given by the Retention curve zone approach, see~\citep{mojeamc}. Combine the improved numerical scheme for temporal integration with the refined mesh, where ${\Delta}(\vec{x})^{r_f+1}$ and make the scatter plot again. \label{ll0}
   \begin{enumerate}
     \item \label{ll1} If the scatter plots for selected numerical method differ a lot proceed the calibration  again, with the new parameter range defined as $\vec{p}_{max} = 1.1\vec{p}_{r_f}$ and  $\vec{p}_{min} = 0.9\vec{p}_{r_f}$. Let us assume that this calibration will generate a vector of SHPs values $\vec{p}_{t}$.
     \item \label{ll2} Perform the validation again with Picard iteration criterion $\varepsilon^{rf+1}=0.1\varepsilon^{rf}$, and with the refined spatial mesh (use one half of the previous spatial step size).
