--- a/version2.tex
+++ b/version2.tex
@@ -406,12 +406,19 @@ And thus the following methodology for the automatic calibration was proposed he
 \item Proceed the calibration procedure with the quasi-explicit stable numerical technique for treating the nonlinear operator explained in equation~\eqref{matice2}, with the initial time step $t_{init}= 10^{-6}$~hrs, and for each subsequent time level $l$, $\Delta t_l = 1.05 \Delta t_{l-1}$, where $l=\{1,n_t\}$, where $n_t$ is the number of time levels used for the temporal discretization; the $dd$-adaptivity algorithm wasn't used at this step. The ranges of parameters for this calibration are given in table~\ref{rozsahy}, so the maximal values of SHP are defined as a vector $\vec{p}^{r_f}_{max}$, and the minimal values are defined as a vector $\vec{p}^{r_f}_{min}$. The spatial discretization for this step of calibration was given in the beginning of this section -- 2097 nodes and 3861 elements. 
 Let us assume that this discretization is given by a mesh density function ${\Delta}(\vec{x})^{r_f}$. The function $\Delta(\vec{x})^{r_f}$ is understood as a spatial distribution of mesh size density, which was used as an input for the mesh generator~\citep{t3d}. The superscript $r_f$ defines the refinement level, where $r_f=0$ at this particular stage, and the vector $\vec{x}$ refers to spatial coordinates inside the domain $\Omega$.
 \item Let us pressume that this inverse model will have more than just a single solution, this is an assumption of multimodality, which is based on~\citep{beven2003-uncertain}. \begin{itemize} \item Then this calibration will generate vectors of SHPs values $\vec{p}^{i_e}_{r_f}$, where the superscript $i_e$ denotes the number of some  particular local extreme. \end{itemize} 
-\item To validate the inverse modeling results, select physically acceptable local extremes and create a scatter plot of the objective function in its neighborhood  with improved temporal integration and spatial discretization. Increase the discretization level $r_f=r_f+1.$ Then 
-
-
- Use Schwarz-Picard method for solving the nonlinear system~\eqref{matice}. The iteration criterion for the Picard method was considered as $\bar{\varepsilon}^{r_f}= 10^{-3}$~cm. Again the super script $rf$ denotes the number of the Picard criterion refinements, which is is still $r_f=0$. Initial time step was $t_{init} =  10^{-8}$~hrs. Time step adaptivity was given by the Retention curve zone approach, see~\citep{mojeamc}. Combine the improved numerical scheme for temporal integration with the refined mesh, where ${\Delta}(\vec{x})^{r_f+1}$ and make the scatter plot again. \label{ll0}
+\item To validate the inverse modeling results, select physically acceptable local extremes and create a scatter plot of the objective function in its neighborhood  with improved temporal integration and spatial discretization. Increase the discretization level $r_f=r_f+1.$ Then the following updates will apply
+\begin{lineq}
+\label{coeffs}
+\begin{split}
+\Delta(\vec{x})^{r_f}  &= \frac\Delta(\vec{x})^{r_f-1}}{2} \\
+\bar{\varepsilon}^{r_f} &= 10^{-3} ; \mbox{cm} \quad  \forall r_f > 0, \\
+t_{init}^{r_f} &=  10^{-8} ; \mbox{hrs} \quad  \forall r_f > 0.
+\end{split}
+\end{lineq}
+If $r_f > 0$, then the nonlinear problem represented now by~\eqref{matice} will be solved by Schwarz-Picard method -- an adaptive domain decomposition~\citep{mojeamc2}. To validate the inverse model solution for $r_f-1$ discretization level perform the following:
   \begin{enumerate}
-    \item \label{ll1} If the scatter plots for selected numerical method differ a lot proceed the calibration  again, with the new parameter range defined as $\vec{p}_{max} = 1.1\vec{p}_{r_f}$ and  $\vec{p}_{min} = 0.9\vec{p}_{r_f}$. Let us assume that this calibration will generate a vector of SHPs values $\vec{p}_{t}$.
+    \item \label{ll1} Compare the scatter 
+   plots for the selected local extreme $i_e$ created with discretization $r_f$ and $r_f-1$. If they differ significantly from the the proceed the calibration  again, with the new parameter range defined as $\vec{p}_{max} = 1.1\vec{p}_{r_f}$ and  $\vec{p}_{min} = 0.9\vec{p}_{r_f}$. Let us assume that this calibration will generate a vector of SHPs values $\vec{p}_{t}$.
     \item \label{ll2} Perform the validation again with Picard iteration criterion $\varepsilon^{rf+1}=0.1\varepsilon^{rf}$, and with the refined spatial mesh (use one half of the previous spatial step size).
     \item Create scatter plots again and validate them again with further refinements as discussed in~\ref{ll0} with the refined parameters of the numerical approximation as given in~\ref{ll2}, and if needed return to the step~\ref{ll1} with the increased refinement level $rf=rf+1$.
     \item If there is no further refinement needed exit the calibration process.
