--- a/version2.tex
+++ b/version2.tex
@@ -26,6 +26,9 @@
 \usepackage{multirow}
 \usepackage{url}
 
+\usepackage{blindtext}
+\usepackage{todonotes}
+
  \RequirePackage{lineno} 
 
 \bibliographystyle{model2-names}
@@ -47,7 +50,7 @@
 
  \newcommand{\Lb}{\pazocal{L}}
  
-
+\newcommand{\fs}{\footnotesize}
 
 %opening
 
@@ -130,7 +133,7 @@ And so the following questions arise.
 
 
 
-The aim of this paper is to answer these proposed issues. The inverse modeling problem applied here for evaluating these issues will not be a synthetic case but will be a real world problem of identification of the SHP parameters for top soil podzolic horizons of experimental catchment Modrava, Sumava National Park, Czech Republic.  The SHPs for the lower horizons were already identified by various laboratory experiments and by data processing (e.g. pedotransfer functions, see Rosetta code~\citep{Schaap}), only the top soil SHPs are difficult to  obtain directly. Moreover, for this type of top soil layer it is even a very difficult to guess some limited ranges of its SHPs. However, the knowledge of the lower horizons should limit the non-uniqueness of this inverse problem. Apart answering the given questions, which are nearly classical but not satisfactory resolved issues in this field of research, we will also try to address issues with initial and boundary condition setup for the approximation of SR infiltration process. And finaly the numerical issues originating from the convection term in the Richards equation representing the axisymmetric SR infiltration flux will be also discussed in this work.
+The aim of this paper is to answer these proposed issues. The inverse modeling problem applied here for evaluating these issues will not be a synthetic case but will be a real world problem of identification of the SHP parameters for top soil podzolic horizons of experimental catchment Modrava, Sumava National Park, Czech Republic.  The SHPs for the lower horizons were already identified by various laboratory experiments and by data processing (e.g. pedotransfer functions, see Rosetta code~\citep{Schaap}), only the top soil SHPs are difficult to  obtain directly. Moreover, for this type of top soil layer it is even a very difficult to guess some limited ranges of its SHPs. However, the knowledge of the lower horizons should limit the non-uniqueness of this inverse problem. Apart answering the given questions, which are nearly classical but not satisfactory resolved issues in this field of research, we will also try to address issues with initial and boundary condition setup for the approximation of SR infiltration process. Finally, the numerical issues originating from the convection term in the Richards equation representing the axisymmetric SR infiltration flux will be also discussed in this work.
 
 
 
@@ -145,7 +148,7 @@ The aim of this paper is to answer these proposed issues. The inverse modeling p
 
 This section is divided into two distinct parts. The first part, section~\ref{assamb}, is focused on assembling the experimental data, which were later used for the inverse modeling. In this section the site description, the reconstruction of the parameters of the SHPs for the lower profiles, and the processing of the experimental data is given.   This section also provides a complete definition of the SHPs parameters -- the solution of our inverse problem -- particularly in the paragraph~\ref{shp}.
 
-The second part of the methodology, section~\ref{invproc}, covers the main topic of this paper --  issues in the Richards equation based inverse model. The governing equation is given together with  notes about the numerical stability of the convection dominant problems, since it is not always mentioned that diffusion type equation in cylindric coordinates (such as the Richards equation or the groundwater flow equation) contains first order derivative term, which is a language of mathematics nothing else than a convection term, and so the numerical stability issues appear.
+The second part of the methodology, section~\ref{invproc}, covers the main topic of this paper --  issues in the Richards equation based inverse model. The governing equation is given together with  notes about the numerical stability of the convection dominant problems, since it is not always mentioned that diffusion type equation in cylindrical coordinates  contains a first order derivative term, which is a language of mathematics  a convection term, and so the numerical stability issues appear. A typical example of this vulnerable problem is the Richards equation or the groundwater flow equation for rotational symmetric problems, where the cylindrical coordinates enable reduction of the three-dimensional computational domain into a two-dimensional domain, which is a widely used approach.
 Further the issues in selecting an appropriate boundary conditions are discussed, since it is not easy to find an agreement between the mathematical model setup and the physical conditions. Finally, the most important part, the construction of the objective function, and the methodology of the automatic calibration is given in this section. 
 
 
@@ -186,12 +189,12 @@ In this work, the SHPs are considered to be the following:
 
 \begin{itemize}
 \item Parameters representing the van Genuchten retention curve model~\citep{vangenuchten}, particularly $\alpha$~[$L^{-1}$] (which can be understood as the inverse of air entry suction) and $n$~[-]. The van Genuchten parameter $m$ was considered as $m=1-\frac{1}{n}$. Both $n$ and $m$ parameters can be understood as the measure of the pore-size distribution.
-\item Saturated water content $\theta_s$~[-]. Note that the residual water content $\theta_r$~[-] is neglected here, because together with the unknown saturated water content, the unknown residual water content cannot lead to a unique solution of inverse modeling.
+\item Saturated water content $\theta_s$~[-]. Note that the residual water content $\theta_r$~[-] is neglected here, because together with the unknown saturated water content, the unknown residual water content can hardly lead to a unique solution of inverse modeling. Unless we were able to conduct an accurate measurement of the water content during the experiment, which is often a problem. Especially, if we take into account, that it is way easier to measure the saturated water content after the experiment, than measure the unsaturated water content and pressure head during the experiment. However, as specified above, no exact saturated water content data of the top soil horizon were available.
 \item Saturated hydraulic conductivity $K_s$ [$L.T^{-1}$]. 
 \item Specific storage $S_s$~[$L^{-1}$] -- represents the linear elasticity of the porous medium. The specific storage in the unsaturated zone is often neglected. However, the effect of the elasticity of the top-soil during the infiltration experiment, which is typical with an abrupt development of hydraulic pressure, should also be included.
 \end{itemize}
 
-An evaluation of these parameters for the soil profile for each horizon given in section~\ref{site} will be discussed here. The focus will be on the top soil layer, where this set of parameters will be identified by an inverse analysis.
+An evaluation of these parameters for the soil profile for each horizon given in section~\ref{site} will be discussed here. The focus will be given on the top soil layer, where this set of parameters will be identified here by  inverse analysis. The SHPs parameters of the lower layers will be obtained here in more standard ways.....\todo{ \fs tahle veta je divna, nevedel jsem jak na ni, prosim navrhni upravu} 
 
 
 \subsubsection{Field infiltration experiment}%[lukas]
@@ -213,7 +216,7 @@ Guelph permeameter measurement (GP) was used for estimating the saturated hydrau
 \subsubsection{Processing the experimental data from single ring infiltration}
 \label{krivka}
 
-A total of 22 SR experiments were conducted on the site. Statistical description of these infiltration data is given by~\citep{jacka-site}, see datasets collected on site 3. The experiments were evaluated as follows. In order to eliminate noise from the experimental values, each SR experiment data set was smoothed. It was observed that the Schwarzendruber analytical model of one-dimensional infiltration exhibited an excellent fitting quality, with the mean  Nash-Sutcliffe model efficiency coefficient value estimated as 0.9974. So we made use of  exponential data smoothing here. The Schwarzendruber equation for cumulative infiltration  states that
+A total of 22 SR experiments were conducted on the site. Statistical description of these infiltration data is given by~\citep{jacka-site}, see datasets collected on site 3. The experiments were evaluated as follows. In order to eliminate noise from the experimental values, each SR experiment data set was smoothed. It was observed that the Schwarzendruber analytical model of one-dimensional infiltration exhibited an excellent fitting quality, with the mean  Nash-Sutcliffe model efficiency coefficient value estimated as 0.9974. Thus we made use of  exponential data smoothing here. The Schwarzendruber equation for cumulative infiltration  states that
 \begin{lineq}
 I(t)=\frac{\bar{S}\left(1-\exp\left(-A_0\sqrt{t}\right)\right)}{A_0}+\bar{K}_{s}t,
 \label{vyhlaz}
@@ -290,9 +293,9 @@ The law of mass conservation  for incompressible flow in cylindric coordinates  
 where $V$ is the volume function [-],  $r$ is the radial coordinate, $\alpha$ is the angular coordinate,  $z$ is the vertical coordinate, and $q_{r, \alpha, z}$ is the  volume flux [$L.T^{-1}$]. The ring infiltration experiment is characterized by rotational symmetric flow, so the angular derivative vanishes. Then the governing equation for  variably saturated and rotational symmetric flow is obtained by substituting the flux in \eqref{conti} by the Darcy-Buckingham law~\eqref{darcybuck}. Together with the consideration of linear elasticity for a porous medium the variably saturated axisymmetric flow in isotropic media is governed by
 \begin{lineq}
 \label{richaxi}
-\left(\frac{\dd \theta}{\dd h} + S_s\frac{\theta(h)}{\theta_s} \right) \frac{\partial h}{\partial t}  =  \frac{\partial K(h) \frac{\partial H}{\partial z}}{\partial z} + \frac{\partial K(h) \frac{\partial H}{\partial r}}{\partial r} + c(x)\frac{\partial H}{\partial r},
+\left(\frac{\dd \theta}{\dd h} + S_s\frac{\theta(h)}{\theta_s} \right) \frac{\partial h}{\partial t}  =  \frac{\partial K(h) \frac{\partial H}{\partial z}}{\partial z} + \frac{\partial K(h) \frac{\partial H}{\partial r}}{\partial r} + c(\vec{x})\frac{\partial H}{\partial r},
 \end{lineq}
-where $S_s$ is the specific storage [$L^{-1}$], $\theta_s$ is the saturated water content [-], and $c(x)$ is the coefificient of the convection for $r$ coordinate [$T^{-1}$], which has to be further explained.
+where $S_s$ is the specific storage [$L^{-1}$], $\theta_s$ is the saturated water content [-],  $c(\vec{x})$ is the coefficient of the convection for $r$ coordinate [$T^{-1}$], which has to be further explained, and the vector $x$ is a vector of the spatial coordinates $\vec{x}=\left( \begin{smallmatrix} r \\ z \end{smallmatrix} \right)$.
 
  \begin{figure}
 \centering
@@ -302,15 +305,15 @@ where $S_s$ is the specific storage [$L^{-1}$], $\theta_s$ is the saturated wate
  \label{valecproudy}
 \end{figure}
 
-Let us consider the model of the infiltration experiment depicted in figure~\ref{valecproudy}. Let the entire flow domain $\Omega=\Omega_{inner} \cup \Omega_{outer}$, where $\Omega_{outer}$ is the flow domain outside the infiltration ring and $\Omega_{inner}$ is the flow domain within the infiltration ring, exactly as depicted in figure~\ref{valec}. It is apparent that the streamlines inside subdomain $\Omega_{inner}$ are parallel, but the streamlines outside the infiltration ring (inside $\Omega_{outer}$) are axisymmetric.  Then the convection coefficient $c(x)$ is defined as follows
+Let us consider the model of the infiltration experiment depicted in figure~\ref{valecproudy}. Let the entire flow domain $\Omega=\Omega_{inner} \cup \Omega_{outer}$, where $\Omega_{outer}$ is the flow domain outside the infiltration ring and $\Omega_{inner}$ is the flow domain within the infiltration ring, exactly as depicted in figure~\ref{valec}. It is apparent that the streamlines inside subdomain $\Omega_{inner}$ are parallel, but the streamlines outside the infiltration ring (inside $\Omega_{outer}$) are only axisymmetric.  Then the convection coefficient $c(\vec{x})$ is defined as follows
 \begin{lineq}
 \label{convect}
-c(x) = \begin{cases}
-	     0 , \quad &\forall x \in \Omega_{inner} \\
-	     \frac{1}{r}K(h)\frac{\partial H}{\partial r} , \quad &\forall x \in \Omega_{outer}.
+c(\vec{x}) = \begin{cases}
+	     0 , \quad &\forall \vec{x} \in \Omega_{inner} \\
+	     \frac{1}{r}K(h) , \quad &\forall \vec{x} \in \Omega_{outer}.
 	    \end{cases}
 \end{lineq}
-Note that $\frac{\partial H}{\partial r} = \frac{\partial h}{\partial r}$, and note that  the flow boundary should not be coincident with the axis of rotation symmetry ($r>0$). Using the standard finite element method approximation, $r$ should even be sufficiently greater than zero (depending on your mesh discretization) to prevent convective dominance. The constitutive relation $\theta(h)$ was substituted by the van Genuchten law~\citep{vangenuchten}, and the constitutive relation $K(h)$ was supplied by the Mualem law~\citep{mualem}.
+Note that  the flow boundary should not be coincident with the axis of rotation symmetry ($r>0$). Moreover, using the standard finite element method approximation, $r$ should even be sufficiently greater than zero (depending on your mesh discretization) to prevent convective dominance. The constitutive relation $\theta(h)$ was substituted by the van Genuchten law~\citep{vangenuchten}, and the constitutive relation $K(h)$ was supplied by the Mualem law~\citep{mualem}.
 
 
 
@@ -344,7 +347,7 @@ Pe = \frac{\frac{\partial h}{\partial r} \Delta x}{2r},
 \end{lineq}
 where $\Delta x$ is the discretization length [$L$]. Since our mesh is triangular,  $\Delta x$ can be roughly assumed to be the greatest triangle altitude (since we assume some mesh quality properties). Then a sufficient distance from the axis of anisotropy is such that the Peclet number is sufficiently low. If we want to make our computation free of spurious oscillations, a sufficiently low Peclet number means $Pe\le 1$. Therefore, the distance from the axis of anisotropy is given by the domain discretization step at the left hand side boundary.  The selected discretization step at the left hand side boundary was assumed as $\Delta x=2$~cm. The domain was therefore detached by 2~cm from the axis of anisotropy (assuming that $\frac{\partial h}{\partial r} (r,z) < 1, \; \forall (r,z) \in \Omega_{outer}$).
 
-In order to avoid the non-Lipschitz boundary (or any boundary with a shape that is close to the non-Lipschitz boundary) the infiltration ring thickness was oversized  for 2.5~cm. It is obvious that the real ring thickness is much smaller (in our case 2~mm), but reducing the  thickness of the ring yields possible numerical issues but it is expected that it does not significantly affect the solution at the top Dirichlet boundary.
+In order to avoid the non-Lipschitz boundary (or any boundary with a shape that is close to the non-Lipschitz boundary) the infiltration ring thickness was oversized  for 2.5~cm. It is obvious that the real ring thickness is much smaller (in our case 2~mm), but using the real ring  thickness yields possible numerical issues, since then the domain has the appearance of a textbook case of  a non-Lipschitz bounded domain, see e.g.~\citep{fem}.  However, it is also expected, that oversizing the ring thickness does not significantly affect the solution at the top Dirichlet boundary. 
 
 The right hand side boundary was located at a distance $r=73$~cm, it means 50~cm from the infiltration ring. 
 
@@ -367,7 +370,7 @@ h(x,t) &= 0  \; \mbox{cm}  \; \Rightarrow \; H(x,t) = -280.0  \; \mbox{cm}; \qua
 \end{lineq}
 where $T$ is the simulation end time [$T$], and $\vec{n}$ is the boundary normal vector.
 
-The initial condition was assumed as a steady state solution of \eqref{richaxi} before the infiltration experiment. Thus the convection vector $\vec{k}(x) = \left( \begin{smallmatrix} 0 \\ 0 \end{smallmatrix} \right), \; \forall x \in \Omega$, and the boundary condition at boundaries $\Gamma_{1,2}$ was assumed as no-flow boundary. Then the initial condition states that 
+The initial condition was assumed as a steady state solution  of \eqref{richaxi}  before the infiltration experiment, if the boundary $\Gamma_1 \cup \Gamma_2$ was a no-flow boundary -- thus the entire domain $\Omega$ was considered in a hydrostatic state.  Then the initial condition states that 
 \begin{lineq}
 H(x) = -280.0 \; \mbox{cm}; \quad \forall x \in \Omega,
 \end{lineq}
@@ -381,10 +384,10 @@ Equation~\eqref{richaxi} was implemented into DRUtES library~\citep{drutes, moje
 
 
 
- The domain was nonuniformly discretized by a triangular mesh. The smallest spatial step was considered for the top layers inside the infiltration ring, close to the Dirichlet boundary. The mesh is depicted on figure~\ref{valec}. The minimal spatial step was 0.5~cm, and the maximal spatial step was 20~cm. The domain was discretized with 2097 nodes and 3861 elements. The coarse mesh for the $dd$-adaptivity method was a uniform quadrilateral mesh with elements 17.75$\times$28.0~cm, i.e. a total of 40 coarse elements and 55 nodes. The purpose of the coarse mesh is to organize the elements of the domain triangularization into a so-called clusters, which form a basic unit for the adaptive domain decomposition used here for solving the nonlinear problem, details can be found in~\citep{mojeamc2}.
+ The domain was nonuniformly discretized by a triangular mesh. The smallest spatial step was considered for the top layers inside the infiltration ring, close to the Dirichlet boundary. The mesh is depicted on figure~\ref{valec}. The minimal spatial step was 0.5~cm, and the maximal spatial step was 20~cm. The domain was discretized with 2097 nodes and 3861 elements. The coarse mesh for the $dd$-adaptivity method was a uniform quadrilateral mesh with elements 17.75$\times$28.0~cm, i.e. a total of 40 coarse elements and 55 nodes. The purpose of the coarse mesh is to organize the elements of the domain triangularization into so-called clusters, which form a basic unit for the adaptive domain decomposition used here for solving the nonlinear problem, details can be found in~\citep{mojeamc2}.
 
  
- The spatial and temporal discretization of \eqref{richaxi} leads into sequential solutions of systems of non-linear equations, see e.g.~\citep{mojecomp}. The system was linearized, as discussed in~\citep{mojejcam2, mojeamc2}, and so the numerical solution requires an iterative solution of 
+ The spatial and temporal discretization of \eqref{richaxi} leads into sequential solutions of systems of non-linear equations, see e.g.~\citep{mojecomp}. The system was linearized as discussed in~\citep{mojeacta, mojeamc}, and so the numerical solution requires an iterative solution of 
 \begin{lineq}
 \label{matice}
 \mathbf{A}(\vec{x}_l^k) \vec{x}_l^{k+1} = \vec{b}(\vec{x}_l^k),
@@ -397,22 +400,22 @@ If the nonlinear problem is treated as
 \mathbf{A}(\vec{x}_{l-1}) \vec{x}_l = \vec{b}(\vec{x}_{l-1}),
 \end{lineq}
  we have introduced a kind of semiexplicit approximation  
-of~\eqref{richaxi}. It is apparent that for short time stepping the method converges to the exact solution. But for the inappropriate time stepping, the method is less accurate, but is also free of possible issues related to the convergence of the nonlinear operator.
+of~\eqref{richaxi}. The method~\eqref{matice} degenerates into~\eqref{matice2} if the error criterion $\varepsilon$ was taken from the extended real numbers, $\varepsilon \in {\overline {\mathbb {R} }}$, and $\varepsilon = + \infty$. It is apparent that for short time stepping the method converges to the exact solution. But for the inappropriate time stepping, the method is less accurate, but is also free of possible issues related to the convergence of the nonlinear operator.
 
 Since the infiltration flux is obtained from the numerical derivative of the solution of \eqref{richaxi},  and since it is well known that inaccurate approximation of the capacity term (time derivative term) yields inaccurate mass properties~\citep{celia}, we are aware of a possible impact of spatial and temporal discretization on the identified SHP values. But we are also aware of possible difficulties with convergence of the linearized discrete system~\eqref{matice} for certain combinations of SHPs values within the ranges given in table~\ref{rozsahy} during the automatic calibration, as discussed in~\cite{beven2003-uncertain}.
 And thus the following methodology for the automatic calibration was proposed here.
 
-\begin{enumerate}
+\begin{enumerate}[label=({\bf \roman*})]
 \item Proceed the calibration procedure with the quasi-explicit stable numerical technique for treating the nonlinear operator explained in equation~\eqref{matice2}, with the initial time step $t_{init}= 10^{-6}$~hrs, and for each subsequent time level $l$, $\Delta t_l = 1.05 \Delta t_{l-1}$, where $l=\{1,n_t\}$, where $n_t$ is the number of time levels used for the temporal discretization; the $dd$-adaptivity algorithm wasn't used at this step. The ranges of parameters for this calibration are given in table~\ref{rozsahy}, so the maximal values of SHP are defined as a vector $\vec{p}^{r_f}_{max}$, and the minimal values are defined as a vector $\vec{p}^{r_f}_{min}$. The spatial discretization for this step of calibration was given in the beginning of this section -- 2097 nodes and 3861 elements. 
-Let us assume that this discretization is given by a mesh density function ${\Delta}(\vec{x})^{r_f}$. The function $\Delta(\vec{x})^{r_f}$ is understood as a spatial distribution of mesh size density, which was used as an input for the mesh generator~\citep{t3d}. The superscript $r_f$ defines the refinement level, where $r_f=0$ at this particular stage, and the vector $\vec{x}$ refers to spatial coordinates inside the domain $\Omega$.
-\item Let us pressume that this inverse model will have more than just a single solution, this is an assumption of multimodality, which is based on~\citep{beven2003-uncertain}. \begin{itemize} \item Then this calibration will generate vectors of SHPs values $\vec{p}^{i_e}_{r_f}$, where the superscript $i_e$ denotes the number of some  particular local extreme. \end{itemize} 
-\item To validate the inverse modeling results, select physically acceptable local extremes and create a scatter plot of the objective function in its neighborhood  with improved temporal integration and spatial discretization. Increase the discretization level $r_f=r_f+1.$ Then the following updates will apply
+Let us assume that this discretization is given by a mesh density function ${\Delta}(\vec{x})^{r_f}$. The function $\Delta(\vec{x})^{r_f}$ is understood as a spatial distribution of mesh size density, which was used as an input for the mesh generator T3D~\citep{t3d}. The superscript $r_f$ defines the refinement level, where $r_f=0$ at this particular stage, and the vector $\vec{x}$ refers to spatial coordinates inside the domain $\Omega$.
+\item Let us pressume that this inverse model will have more than just a single solution, this is an assumption of multimodality, which is based on~\citep{beven2003-uncertain}. \begin{itemize} \item Then this calibration will generate vectors of SHPs values $\vec{p}^{i_e}_{r_f}$, where the superscript $i_e=\{1,...,n_e\}$, where $n_e$     denotes the number of  local extremes. \end{itemize} 
+\item To validate the inverse modeling results, select physically acceptable local extremes with good fitting qualities, and create a scatter plot of the objective function in its neighborhood  with improved temporal integration and spatial discretization. Increase the discretization level \begin{lineq} r_f=r_f+1.\end{lineq} Then the following updates will apply
 \begin{lineq}
 \label{coeffs}
 \begin{split}
-\Delta(\vec{x})^{r_f}  &= \frac{\Delta(\vec{x})^{r_f-1}}{2} \\
-\bar{\varepsilon}^{r_f} &= 10^{-3} ; \mbox{cm} \quad  \forall r_f > 0, \\
-t_{init}^{r_f} &=  10^{-8} ; \mbox{hrs} \quad  \forall r_f > 0.
+\Delta(\vec{x})^{r_f}  &= \frac{\Delta(\vec{x})^{r_f-1}}{2}, \\
+\varepsilon^{r_f} &= 10^{-3} \; \mbox{cm} \quad  \forall r_f > 0, \\
+t_{init}^{r_f} &=  10^{-8} \; \mbox{hrs} \quad  \forall r_f > 0.
 \end{split}
 \end{lineq}
 If $r_f > 0$, then the nonlinear problem represented now by~\eqref{matice} will be solved by Schwarz-Picard method -- an adaptive domain decomposition~\citep{mojeamc2}. To validate the inverse model solution for $r_f-1$ discretization level perform the following:
@@ -420,16 +423,16 @@ If $r_f > 0$, then the nonlinear problem represented now by~\eqref{matice} will 
     \item \label{val} Compare the scatter 
    plots for the selected local extreme $i_e$ created with discretization $r_f$ and $r_f-1$. For this local extreme a vector of SHP parameters $\vec{p}_{r_f-1}^{i_e}$ is handled.  
     \item \label{cond} {\bf If} the scatter plots differ significantly  
-   \begin{enumerate}
-    \item Proceed the calibration  again, with the new parameter range defined as $\vec{p}_{max} = 1.1\vec{p}_{r_f-1}^{i_e}$ and  $\vec{p}_{min} = 0.9\vec{p}_{r_f-1}^{i_e}$. This new calibration will update the vector  $\vec{p}_{r_f-1}^{i_e}$ to $\vec{p}_{r_f}^{i_e}$.
+   \begin{itemize}%[label=(\subscript{b}{\arabic*})]
+    \item Proceed the calibration  again with the new parameter range defined as $\vec{p}_{max} = 1.1\vec{p}_{r_f-1}^{i_e}$ and  $\vec{p}_{min} = 0.9\vec{p}_{r_f-1}^{i_e}$. This new calibration will update the vector  $\vec{p}_{r_f-1}^{i_e}$ to $\vec{p}_{r_f}^{i_e}$.
     \item \label{ll2} Increase the discretization level $r_f$ as $r_f=r_f+1$, perform the update~\eqref{coeffs}, return to~\ref{val}, and check the condition~\ref{cond}.
-    \end{enumerate}
+    \end{itemize}
     \item {\bf else}
-    \begin{enumerate}
+    \begin{itemize}%[label=(\subscript{c}{\arabic*})]
     \item Exit the calibration process.
-    \end{enumerate}
+    \end{itemize}
   \end{enumerate}
-  \item At this step  vectors of validated inverse model solutions $\vec{p}^{i_e}$ are available for discussion.
+  \item At this step  the vectors  of the validated inverse model solutions $\vec{p}^{i_e}$ (SHP parameter sets) are available for discussion. 
 \end{enumerate}
 
 
@@ -445,7 +448,7 @@ Since the parameters will be identified using a stochastic method, we have to in
 
 \begin{table}[ht]
 \begin{center}
-\caption{Ranges of SHPs ($\vec{p}_{max}$ and $\vec{p}_{min}$ for identifying the SHPs in the top-soil layer.}
+\caption{Ranges of SHPs ($\vec{p}_{max}$ and $\vec{p}_{min}$) for identifying the SHPs in the top-soil layer for {\it refinement level} $r_f=0$.}
 \begin{small}
 \doublespacing
 \begin{tabular}{c c c c c}
@@ -464,31 +467,34 @@ $\theta_s$ [-]&$\alpha$ [m$^{-1}$]&n [-]& $K_s$ [m.s$^{-1}$] & $S_s$ [m$^-1$] \\
 The objective function is defined in the following paragraph.
 
 
-Let $\bar{I}(\vec{p},t)$ be the cumulative infiltration obtained from solving the mathematical model~\eqref{richaxi} bounded by the initial and boundary conditions  defined in section~\ref{bccond} for a certain vector of SHP $\vec{p}$ considered as
+Let $\bar{I}(\vec{p},t)$ be the cumulative infiltration obtained from solving the mathematical model~\eqref{richaxi} bounded by the initial and boundary conditions  defined in section~\ref{bccond} for a certain vector of SHPs parameters $\vec{p}$ considered as
 \begin{lineq}\bar{I}(\vec{p},t) = \frac{\int\limits_0^t \int\limits_{\Gamma_1}-K \frac{\partial H}{\partial \vec{n}}(t)  \dd \Gamma_1 \dd t}{\int\limits_{\Gamma_1} \dd \Gamma_1}.\end{lineq}
 Let $I(t)$ be the cumulative infiltration defined by \eqref{vyhlaz} with parameters given in section~\ref{krivka}. 
 Then the objective function was defined for three different criteria in order to avoid ill-posed objective function definition.
 
 The objective functions were defined as follows:
-\begin{enumerate}
-\item the first criterion $\Psi_1$ was defined as $L_2$ norm of the difference between the  experimental and model data and thus
+\begin{enumerate}[label={\bf \Roman*}.]
+\item First criterion $\Psi_1$ was defined as $L_2$ norm of the difference between the  experimental and model data and thus
 \begin{lineq}
 \label{objektiva1}
 \Psi_1 (\vec{p}) = \sqrt{\int\limits_0^{T_{end}} \left( \bar{I}(\vec{p},t) - I(t) \right)^2 \dd t},
 \end{lineq}
-where $T_{end}$ is the final simulation time [$T$],
-\item the second criterion was the $L_{\infty}$ norm of the difference between the experimental and model data and thus
+where $T_{end}$ is the final simulation time [$T$], which is indeed the root mean square error for continous functions. This could be understood as a global criterion.
+\item Second criterion was the $L_{\infty}$ norm of the difference between the experimental and model data and thus
 \begin{lineq}
 \label{objektiva2}
-\Psi_2 (\vec{p}) = \mathrm{sup} \left( \sqrt{\left( \bar{I}(\vec{p},t) - I(t) \right)^2} \right), \quad  t \in (0, T_{end}),
+\Psi_2 (\vec{p}) = \mathrm{sup} \left( \sqrt{\left( \bar{I}(\vec{p},t) - I(t) \right)^2} \right), \quad  t \in (0, T_{end}).
 \end{lineq}
-\item and the third criterion was considered as the difference between the final derivatives between the model data and the experimental data
+This could be understood as a local criterion.
+\item Third criterion was considered as the difference between the final derivatives between the model data and the experimental data
 \begin{lineq}
 \label{objektiva3}
 \Psi_3 (\vec{p}) =  \sqrt{\left( \frac{\dd \bar{I}(\vec{p},T_{end})}{\dd t} - \frac{\dd I(T_{end})}{\dd t} \right)^2}.
 \end{lineq}
+This could also be understood as a local criterion.
+
 \end{enumerate}
-And so we have applied here a multi-objective optimization.
+And so we have applied here a multi-objective optimization. However, it is apparent that minimizing the objective function~\eqref{objektiva1} also minimizes the objective functions~\eqref{objektiva2} and  \eqref{objektiva3}. The aim of this multi-objective definition was improving the conditioning of this inverse problem. If we considered the objective function~\eqref{objektiva1} only, then we were probably able to obtain the same solution as with this multi-objective definition with slower convergence of optimization procedure only (the selection of the optimization algorithm will be explained in the following section~\ref{optima}). This multi-objective function definition is based on experience from our previous attempts in inverse analyses of this infiltration problem.
 
 
 
